--- a/db_config.json
+++ b/db_config.json
@@ -1,1 +1,7 @@
-{"host": "localhost", "port": 3306, "database": "darsinurse", "user": "root", "password": "darsinurse123"}
+{
+    "host": "https://db.darsinurse.hint-lab.id",
+    "port": 3306,
+    "user": "root",
+    "password": "darsinurse123",
+    "database": "darsinurse"
+}
