--- a/app_config.json
+++ b/app_config.json
@@ -1,10 +1,3 @@
 {
-    "db_host": "localhost",
-    "db_port": 3306,
-    "db_user": "root",
-    "db_password": "",
-    "db_name": "fall_detection_db",
-    "table_name": "fall_events",
-    "room_id": "ROOM_01",
-    "device_id": "CAM_001"
+    "table_name": "vitals"
 }
