--- a/data_config.json
+++ b/data_config.json
@@ -1,5 +1,5 @@
 {
-    "room_id": "Rpameran",
-    "status": "PEOPLE",
+    "room_id": "Rpameran1",
+    "status": "NO_PEOPLE",
     "nilai_sensor": 0.0
 }
