--- a/rsi_config.json
+++ b/rsi_config.json
@@ -1,6 +1,6 @@
 {
-    "device_id": "Dpameran",
-    "heart_rate": 72,
-    "breath_rate": 16,
-    "distance": 0.0
+    "device_id": "Dpameran1",
+    "heart_rate": 150,
+    "breath_rate": 90,
+    "distance": 111.0
 }
